<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/pokedexMenu"
        android:title="@string/pokedex_menu" />
    <item
        android:id="@+id/pokeMap"
        android:title="@string/pokedex_menu" />
    <item
        android:id="@+id/profile"
        android:title="@string/profileSubMenuTitle"></item>
    <item
        android:id="@+id/crafting"
        android:title="@string/toogle_laboratory_sub_menu_title"></item>
    <item
        android:id="@+id/options"
        android:title="@string/toogle_options_sub_menu_title"></item>
    <item
        android:id="@+id/about"
        android:title="@string/about_menu" />
    <item
        android:id="@+id/logOut"
        android:title="@string/logout_sub_menu_title"></item>

</menu>